# food_detector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
scripts/: perception_service.py  run_perception_module.py  run_ros_server.py  run_sim_face_detector.py  run_sim_food_detector.py  sim_food_publisher.py
src/food_detector/: ReconfigManager.py  TestReconfigModule.py  TestRepubModule.py  __init__.py  action_detector.py  ada_conf.py  ada_feeding_demo_config.py  camera_subscriber_image_publisher.py  food_detector.py  image_publisher.py  maskrcnn_detector.py  newTestReconfig.py  reconfig_manager.py  repub_manager.py  retinanet_detector.py  run_perception_module.py  sim_face_detector.py  sim_food_detector.py  spa_demo_config.py  spanet_detector.py  spnet_detector.py  test.py  util.py  wall_detector.py
src/food_detector_base/: __init__.py  image_publisher.py  reconfig_detector.py  retinanet_detector.py  sim_face_detector.py  sim_food_detector.py  spa_demo_config.py  spanet_detector.py  spanet_service.py  spnet_detector.py  test.py  visualizer.py  wall_detector.py
srv/: GetAction.srv  PublishLoss.srv  SPANetTrigger.srv
