<?xml version="1.0"?>
<package format="2">
  <name>food_detector</name>
  <version>0.1.0</version>
  <description>Food Pose Estimator with CNN based approaches</description>
  <license>UNRELEASED</license>

  <maintainer email="gilwoo@cs.uw.edu">Gilwoo Lee</maintainer>
  <author email="yskim041@gmail.com">Youngsun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pose_estimators</exec_depend>
  <exec_depend>pytorch_retinanet</exec_depend>
  <exec_depend>bite_selection_package</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>torch</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
